fix: Error in makefile

--- a/module_00/ex01/Makefile
+++ b/module_00/ex01/Makefile
@@ -12,8 +12,7 @@
 
 NAME	= phonebook
 CC		= c++
-CFLAGS	= -Wall -Werror -Wextra -std=c++98 -g -pedantic
-
+CFLAGS	= -Wall -Werror -Wextra -std=c++98
 SRC = 	main.cpp\
 		PhoneBook.cpp\
 		Contact.cpp\
