fix: Makefile is ok in megaphone

--- a/module_00/ex00/Makefile
+++ b/module_00/ex00/Makefile
@@ -23,11 +23,13 @@ RM		= rm -rf
 
 all:		$(NAME)
 
+create_obj = @mkdir -p $(OBJ_DIR)
+
 $(NAME):	$(OBJ)
 			$(CC) $(CPPFLAGS) $(OBJ) -o $(NAME)
 
 $(OBJ_DIR)/%.o:	%.cpp
-	mkdir -p $(OBJ_DIR)
+	$(call create_obj)
 	$(CC) $(CPPFLAGS) -c $< -o $@
 
 clean:
