--- a/module_01/ex04/Makefile
+++ b/module_01/ex04/Makefile
@@ -6,18 +6,15 @@
 #    By: dmonteir <dmonteir@student.42sp.org.br>    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/07/07 19:04:45 by dmonteir          #+#    #+#              #
-#    Updated: 2023/07/08 20:00:13 by dmonteir         ###   ########.fr        #
+#    Updated: 2023/07/08 20:19:34 by dmonteir         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME	= attack
+NAME	= sed
 CC		= c++
 CPPFLAGS	= -Wall -Werror -Wextra -std=c++98
 
 SRC =	main.cpp\
-		HumanA.cpp\
-		HumanB.cpp\
-		Weapon.cpp\
 
 VPATH	= ./srcs/
 
