feat: init class and files of ex00 of list03

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
 		"clocale": "cpp",
 		"cmath": "cpp",
 		"complex": "cpp",
+		"csignal": "cpp",
 		"cstdarg": "cpp",
 		"cstddef": "cpp",
 		"cstdint": "cpp",
