feat: ex00 is ok

--- a/module_03/ex00/Makefile
+++ b/module_03/ex00/Makefile
@@ -6,7 +6,7 @@
 #    By: dmonteir <dmonteir@student.42sp.org.br>    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/07/07 19:04:45 by dmonteir          #+#    #+#              #
-#    Updated: 2023/07/16 14:46:29 by dmonteir         ###   ########.fr        #
+#    Updated: 2023/07/19 20:59:35 by dmonteir         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -15,7 +15,7 @@ CC		= c++
 CPPFLAGS	= -Wall -Werror -Wextra -std=c++98
 
 SRC =	main.cpp\
-		Fixed.cpp\
+		ClapTrap.cpp\
 
 VPATH	= ./srcs/
 
